examples/test/testpolicy12803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12803
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key24: value36
      key4: value38
      key10: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value3
          key6: value26
          key7: value2
      podSelector:
        matchLabels:
          key48: value37
